--- a/pom.xml
+++ b/pom.xml
@@ -4,25 +4,18 @@
     <parent>
         <groupId>uk.ac.ebi.pride.maven</groupId>
         <artifactId>pride-base-master</artifactId>
-        <version>1.0.3</version>
+        <version>1.0.5</version>
     </parent>
 
     <groupId>uk.ac.ebi.pride</groupId>
     <artifactId>psm-index-search</artifactId>
     <packaging>jar</packaging>
-    <version>0.1.8-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <name>psm-index-search</name>
 
     <!--
         To build the project use:
             mvn clean package
-
-        Note: To use the code for index generation/updates (write access), maven profiles are needed:
-
-            db-pride-repo-pridepro (DB config to retrieve data to index)
-            db-pride-repo-pridearch-ro-user (DB user details)
-            pride-archive-solr-cores (config for the solr cores)
-            pride3-submission-pipeline (??)
     -->
 
     <licenses>
@@ -33,15 +26,6 @@
         </license>
     </licenses>
 
-    <developers>
-        <developer>
-            <name>PRIDE Developer</name>
-            <id>pride-support@ebi.ac.uk</id>
-            <email>pride-support@ebi.ac.uk</email>
-            <organization>Proteomics Services Team, EMBL - European Bioinformatics Institute</organization>
-        </developer>
-    </developers>
-
     <organization>
         <name>EMBL - European Bioinformatics Institute</name>
         <url>http://www.ebi.ac.uk</url>
@@ -50,8 +34,8 @@
     <properties>
         <archive.repo.version>0.1.19</archive.repo.version>
         <archive.data.provider.api.version>2.0.6</archive.data.provider.api.version>
-        <pride.index.utils.version>0.1.1</pride.index.utils.version>
-        <archive.utils.version>0.1.11</archive.utils.version>
+        <pride.index.utils.version>0.1.2-SNAPSHOT</pride.index.utils.version>
+        <archive.utils.version>0.1.21</archive.utils.version>
     </properties>
 
     <build>
@@ -140,8 +124,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <!--NOTE: you must have this version number, otherwise, the build will not be able to find Validator-->
-                <!--<version>2.4</version>-->
                 <configuration>
                     <excludes>
                         <exclude>**/test</exclude>
@@ -183,25 +165,11 @@
 
     <dependencies>
         <!-- ##### PRIDE dependencies ##### ##### ##### ##### ##### -->
-
         <!--archive data provider-->
         <dependency>
             <groupId>uk.ac.ebi.pride.archive</groupId>
             <artifactId>archive-data-provider-api</artifactId>
             <version>${archive.data.provider.api.version}</version>
-        </dependency>
-
-        <!-- archive repo -->
-        <dependency>
-            <groupId>uk.ac.ebi.pride.archive</groupId>
-            <artifactId>archive-repo</artifactId>
-            <version>${archive.repo.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-log4j12</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
 
         <!-- archive utils for spectrum id generation -->
@@ -222,72 +190,91 @@
             psm-index and protein-identification-index are using the same version -->
 
         <!-- ##### 3rd party dependencies ##### ##### ##### ##### ##### -->
-        <!-- spring-data solr-->
+        <!-- spring-data mongo db-->
         <dependency>
             <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-solr</artifactId>
-        </dependency>
-
-        <!--SolrJ-->
-        <dependency>
-            <groupId>org.apache.solr</groupId>
-            <artifactId>solr-solrj</artifactId>
-            <version>${solrj.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.solr</groupId>
-            <artifactId>solr-test-framework</artifactId>
-            <version>${solrj.version}</version>
-            <scope>test</scope>
+            <artifactId>spring-data-mongodb</artifactId>
+            <version>1.5.6.RELEASE</version>
             <exclusions>
                 <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-jdk14</artifactId>
+                    <groupId>org.mongodb</groupId>
+                    <artifactId>mongo-java-driver</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
 
-        <!-- Oracle DB -->
         <dependency>
-            <groupId>com.oracle</groupId>
-            <artifactId>oracle-thin</artifactId>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>2.14.3</version>
         </dependency>
+        <!-- fongo in memory mongo db for unit testing -->
 
-        <!-- Mockito for testing -->
         <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
+            <groupId>com.github.fakemongo</groupId>
+            <artifactId>fongo</artifactId>
+            <version>1.5.8</version>
             <scope>test</scope>
         </dependency>
 
-        <!-- Guava for partitioning -->
         <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>16.0</version>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring.version}</version>
+            <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.hamcrest</groupId>
+                    <artifactId>hamcrest-core</artifactId>
+                </exclusion>
+            </exclusions>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-library</artifactId>
+            <version>1.3</version>
+        </dependency>
     </dependencies>
 
     <repositories>
-        <repository> <!-- EBI repo -->
-            <id>nexus-ebi-repo</id>
-            <name>The EBI internal repository</name>
-            <url>http://www.ebi.ac.uk/intact/maven/nexus/content/repositories/ebi-repo/</url>
-            <releases>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
+        <repository>
+            <id>nexus-ebi-release-repo</id>
+            <url>http://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-repo/</url>
+        </repository>
+        <repository>
+            <id>nexus-ebi-snapshot-repo</id>
+            <url>http://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-snapshots/</url>
         </repository>
     </repositories>
 
+    <distributionManagement>
+        <!-- EBI repo -->
+        <repository>
+            <id>pst-release</id>
+            <name>EBI Nexus Repository</name>
+            <url>http://www.ebi.ac.uk/Tools/maven/repos/content/repositories/pst-release</url>
+        </repository>
+        <!-- EBI SNAPSHOT repo -->
+        <snapshotRepository>
+            <uniqueVersion>false</uniqueVersion>
+            <id>pst-snapshots</id>
+            <name>EBI Nexus Snapshots Repository</name>
+            <url>http://www.ebi.ac.uk/Tools/maven/repos/content/repositories/pst-snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+
     <scm>
-        <connection>scm:git:https://github.com/PRIDE-Archive/psm-index-service.git</connection>
-        <developerConnection>scm:git:https://github.com/PRIDE-Archive/psm-index-service.git</developerConnection>
-        <url>scm:git:https://github.com/PRIDE-Archive/psm-index-service.git</url>
+        <connection>scm:git:https://github.com/PRIDE-Archive/psm-index-search.git</connection>
+        <developerConnection>scm:git:https://github.com/PRIDE-Archive/psm-index-search.git</developerConnection>
+        <url>scm:git:https://github.com/PRIDE-Archive/psm-index-search.git</url>
         <tag>HEAD</tag>
     </scm>
-    
 
 </project>
