--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     </parent>
 
     <groupId>uk.ac.ebi.pride</groupId>
-    <artifactId>psm-index-search</artifactId>
+    <artifactId>mongo-psm-index-search</artifactId>
     <packaging>jar</packaging>
     <version>1.0.0-SNAPSHOT</version>
     <name>psm-index-search</name>
