--- a/pom.xml
+++ b/pom.xml
@@ -11,25 +11,12 @@
     <artifactId>mongo-psm-index-search</artifactId>
     <packaging>jar</packaging>
     <version>1.0.0-SNAPSHOT</version>
-    <name>psm-index-search</name>
+    <name>mongo-psm-index-search</name>
 
     <!--
         To build the project use:
             mvn clean package
     -->
-
-    <licenses>
-        <license>
-            <name>The Apache Software License 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
-
-    <organization>
-        <name>EMBL - European Bioinformatics Institute</name>
-        <url>http://www.ebi.ac.uk</url>
-    </organization>
 
     <properties>
         <archive.repo.version>0.1.19</archive.repo.version>
@@ -203,6 +190,7 @@
             </exclusions>
         </dependency>
 
+        <!-- mongo java driver, compatibility version -->
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongo-java-driver</artifactId>
