--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <groupId>uk.ac.ebi.pride</groupId>
     <artifactId>mongo-psm-index-search</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <name>mongo-psm-index-search</name>
 
     <!--
@@ -235,7 +235,7 @@
         <connection>scm:git:https://github.com/PRIDE-Archive/mongo-psm-index-search.git</connection>
         <developerConnection>scm:git:https://github.com/PRIDE-Archive/mongo-psm-index-search.git</developerConnection>
         <url>scm:git:https://github.com/PRIDE-Archive/mongo-psm-index-search.git</url>
-        <tag>mongo-psm-index-search-1.0.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
 </project>
