--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>uk.ac.ebi.pride</groupId>
+    <artifactId>mongo-psm-index-search</artifactId>
+    <packaging>jar</packaging>
+    <version>1.0.1-SNAPSHOT</version>
+    <name>mongo-psm-index-search</name>
+
     <parent>
         <groupId>uk.ac.ebi.pride.architectural</groupId>
         <artifactId>pride-core</artifactId>
         <version>1.0.1</version>
     </parent>
-
-    <groupId>uk.ac.ebi.pride</groupId>
-    <artifactId>mongo-psm-index-search</artifactId>
-    <packaging>jar</packaging>
-    <version>1.0.1-SNAPSHOT-ORCID</version>
-    <name>mongo-psm-index-search</name>
 
     <!--
         To build the project use:
@@ -19,10 +19,10 @@
     -->
 
     <properties>
-        <archive.repo.version>1.0.1-SNAPSHOT-ORCID</archive.repo.version>
-        <archive.data.provider.api.version>2.0.10-SNAPSHOT-ORCID</archive.data.provider.api.version>
-        <pride.index.utils.version>1.0.1-SNAPSHOT-ORCID</pride.index.utils.version>
-        <archive.utils.version>0.1.22-SNAPSHOT-ORCID</archive.utils.version>
+        <archive.repo.version>1.0.1</archive.repo.version>
+        <archive.data.provider.api.version>2.0.11</archive.data.provider.api.version>
+        <pride.index.utils.version>1.0.1</pride.index.utils.version>
+        <archive.utils.version>0.1.22</archive.utils.version>
     </properties>
 
     <build>
